2019-12-22  Bruno Haible  <bruno@clisp.org>

	build: Update after gnulib changed.
	* lib/Makefile.am (libunistring.sym): Don't rename the
	gl_get_setlocale_null_lock function.
	* NEWS: Document the fixed multithread-safety bugs:
	  2019-12-18  Bruno Haible  <bruno@clisp.org>
	      hard-locale: Make multithread-safe.
	      This fix impacts mbrtowc on Cygwin and Haiku.
	  2019-12-17  Bruno Haible  <bruno@clisp.org>
	      localcharset: Fix multithread-safety bug on Windows and OS/2.

2019-12-22  Bruno Haible  <bruno@clisp.org>

	build: Fix spurious error message in 'doc'.
	* doc/Makefile.am (RM): New variable.

2019-12-19  Bruno Haible  <bruno@clisp.org>

	build: Remove generated lib/uni*.h files from the tarball.
	* lib/Makefile.am (nodist_include_HEADERS): New variable.
	(nobase_include_HEADERS): Remove the headers files listed in
	nodist_include_HEADERS.

2019-09-01  Bruno Haible  <bruno@clisp.org>

	build: Explain how to avoid skipped tests.
	* HACKING: Explain which locales to install, to avoid skipped tests.

2019-09-01  Bruno Haible  <bruno@clisp.org>

	build: Add support for shallow-cloning of subdirectories.
	* gitsub.sh (func_usage): Document allowed git options with 'git pull'.
	(func_pull): Accept GIT_OPTIONS argument.
	(pull): Parse git options before complaining about too many arguments.
	Pass the git options to func_pull.

2019-08-18  Bruno Haible  <bruno@clisp.org>

	build: Don't use an obsolete libtool macro.
	* m4/exported.m4 (gt_GLOBAL_SYMBOL_PIPE): Require
	_LT_CMD_GLOBAL_SYMBOLS, not AC_LIBTOOL_SYS_GLOBAL_SYMBOL_PIPE.

2019-06-30  Bruno Haible  <bruno@clisp.org>

	build: Fix build errors with MSVC.
	* lib/exported.sh.in: Remove one level of eval.
	* lib/Makefile.am (config.h): Redirect compiler output to stderr.
	Remove symbols that contain an '@'.

2019-05-11  Bruno Haible  <bruno@clisp.org>

	Update bug reporting instructions.
	* README: Tell users to report bugs in the bug tracker or by email.